# src/controllers/coordenadorController.ts
@@ -1,6 +1,7 @@
 import { Controller, Request, Response } from "tsoa";
 import { CoordenadorService } from "@/services/coordenador/coordenadorService.js";
 import { NewUser, CreateUser } from "@/interfaces/coordenacao/Coordenacao.js";
+import { StatusConta, TipoUser } from "@prisma/client";
 
 
 export class CoordenacaoController extends Controller{
@@ -14,5 +15,9 @@ export class CoordenacaoController extends Controller{
             dataCriacao: new Date()
         };
         return await this.coordenacaoService.createNewUser(newUserData)
+    }
+    async handleFindUsers(tipoUser?:TipoUser, statusConta?:StatusConta){
+
+        return await this.coordenacaoService.listUsers(tipoUser, statusConta)
     }
 }
